--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -16,92 +15,93 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
-    
-    # Install system dependencies
-    - name: Install required libraries
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          libasound2t64 \
-          libatk1.0-0 \
-          libatk-bridge2.0-0 \
-          libcups2 \
-          libdrm2 \
-          libgbm1 \
-          libnspr4 \
-          libnss3 \
-          libx11-6 \
-          libxcomposite1 \
-          libxdamage1 \
-          libxext6 \
-          libxfixes3 \
-          libxrandr2
-      
-    - name: Install project dependencies
-      run: |
-        dotnet restore
-        # Add required EF Core design package
-        dotnet add server/server.csproj package Microsoft.EntityFrameworkCore.Design
-      
-    - name: Build projects
-      run: |
-        dotnet build server/server.csproj
-        dotnet build Playwright/Playwright.csproj
-    
-    # Robust database setup
-    - name: Setup database
-      run: |
-        # Install EF Core tools
-        dotnet tool install --global dotnet-ef
-        echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
         
-        # Verify project file exists
-        if [ ! -f "server/server.csproj" ]; then
-          echo "Error: server.csproj not found!"
-          ls -la server/
-          exit 1
-        fi
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
         
-        # Run migrations using explicit project file paths
-        dotnet ef database update --project server/server.csproj --startup-project server/server.csproj --verbose
-        
-        # Alternative if using DbContext directly
-        # dotnet exec --runtimeconfig server/bin/Debug/net8.0/server.runtimeconfig.json --depsfile server/bin/Debug/net8.0/server.deps.json ef database update
-    
-    # Install Playwright browsers
-    - name: Install Playwright
+    - name: Install Playwright packages
       run: |
+        dotnet add Playwright/Playwright.csproj package Microsoft.Playwright.NUnit
+        dotnet add Playwright/Playwright.csproj package Microsoft.Playwright
         dotnet tool install --global Microsoft.Playwright.CLI
-        echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+        
+    - name: Install system dependencies
+      run: |
+       sudo apt-get update
+       sudo apt-get install -y \
+       liboss4-salsa-asound2 \
+       libatk1.0-0 \
+       libatk-bridge2.0-0 \
+       libatomic1 \
+       libcairo2 \
+       libcups2 \
+       libdbus-1-3 \
+       libdrm2 \
+       libgbm1 \
+       libglib2.0-0 \
+       libgtk-3-0 \
+       libnspr4 \
+       libnss3 \
+       libpango-1.0-0 \
+       libx11-6 \
+       libxcb1 \
+       libxcomposite1 \
+       libxdamage1 \
+       libxext6 \
+       libxfixes3 \
+       libxkbcommon0 \
+       libxrandr2 \
+       xvfb
+       
+    - name: Install browsers
+      run: |
         cd Playwright
-        dotnet playwright install --with-deps chromium
-    
-    # Start services
+        dotnet build
+        playwright install --with-deps chromium
+        cd ..
+        
+    - name: Verify installation
+      run: |
+        ls -la ~/.cache/ms-playwright/
+        playwright --version
+        dotnet tool list -g
+        
+    # Start server (.NET application)
     - name: Start server
       run: |
-        cd server
-        nohup dotnet run > server.log 2>&1 &
-        echo "Waiting for server..."
-        timeout 30 bash -c 'until curl -s http://localhost:5000/api/health >/dev/null; do sleep 1; done'
-    
-    - name: Start client
+        cd server/
+        dotnet run &
+        echo "Server starting..."
+        sleep 10  # Give the server time to start
+        cd ..
+        
+    # Start client (Node.js application)
+    - name: Install client dependencies and start
       run: |
-        cd client
+        cd client/
         npm install
-        nohup npm run dev > client.log 2>&1 &
-        echo "Waiting for client..."
-        timeout 30 bash -c 'until curl -s http://localhost:5173 >/dev/null; do sleep 1; done'
-    
-    # Run tests
-    - name: Run Playwright tests
+        npm run dev &
+        echo "Client starting..."
+        sleep 15  # Give the client app time to start
+        cd ..
+        
+    # Debug information
+    - name: Check if services are running
       run: |
-        cd Playwright
-        dotnet test --logger "console;verbosity=detailed"
-    
-    - name: Run unit tests
-      run: dotnet test Xunit/Xunit.csproj
+        echo "Checking if client and server are running..."
+        netstat -tulpn
+        curl -v http://localhost:5173/ || echo "Client service not responding"
+        
+    - name: Set HEADLESS environment variable
+      run: echo "HEADLESS=true" >> $GITHUB_ENV
       
-    - name: Run Postman tests
-      run: |
-        npm install -g newman
-        newman run Postman/CRM-Testning.postman_collection
+    - name: Run Playwright tests
+      run: xvfb-run --auto-servernum dotnet test Playwright --no-build --verbosity normal
+      
+    - name: Run unit tests
+      run: dotnet test Xunit/ --no-build --verbosity normal
+      
+    - name: Install Newman
+      run: npm install -g newman
