--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: testdb
+          POSTGRES_PASSWORD: Tosspoppe2004
+          POSTGRES_DB: postgres
         ports:
           - 5432:5432
         options: >-
@@ -80,7 +80,7 @@ jobs:
     - name: Wait for PostgreSQL and Seed Data
       run: |
         sleep 5
-        psql postgresql://postgres:postgres@localhost:5432/testdb <<EOF
+        psql postgresql://postgres:postgres@localhost:5432/postgres <<EOF
         CREATE TYPE role AS ENUM ('GUEST', 'USER', 'ADMIN');
         CREATE TYPE issue_state AS ENUM ('OPEN', 'CLOSED', 'PENDING');
         CREATE TYPE sender AS ENUM ('USER', 'SUPPORT');
