--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,6 +106,17 @@ jobs:
         playwright --version
         dotnet tool list -g
 
+    - name: Wait for PostgreSQL to be ready
+      run: |
+        for i in {1..15}; do
+          pg_isready -h localhost -p 5432 -U postgres && echo "Postgres is ready" && exit 0
+          echo "Waiting for Postgres..."
+          sleep 2
+        done
+        echo "Postgres did not start in time" && exit 1
+
+
+
     - name: Start server
       run: |
         cd server/
